# cpp-result

./: .clang-format  CMakeLists.txt
include/: result-old.hpp  result.hpp
include/daveth/: result.hpp  result2.hpp
include/daveth/bits/: result-interface.hpp  result-operators.hpp  result-optional-e.hpp  result-variant-te.hpp
source/: result.cpp
test/: test.cpp
